--- a/frontend/src/components/RequestsTable/requests-table.css
+++ b/frontend/src/components/RequestsTable/requests-table.css
@@ -12,7 +12,7 @@
 }
 
 .requests-table thead {
-  background-color: #f3f4f6;
+  background-color: #f8fafc;
 }
 
 .requests-table th,
@@ -25,19 +25,79 @@
 .requests-table th {
   font-weight: 600;
   color: #374151;
+  font-size: 0.85rem;
+  letter-spacing: 0.3px;
+}
+
+.requests-table td {
+  vertical-align: middle;
+  font-size: 0.8rem;
+}
+
+.requests-table tbody tr {
+  transition: background 0.2s ease;
 }
 
 .requests-table tbody tr:hover {
   background-color: #f9fafb;
 }
 
+.table-action-column {
+  text-align: center;
+  width: 60px;
+}
+
+.remove-favorite-btn {
+  background: transparent;
+  border: 1px solid #e53935;
+  color: #e53935;
+  padding: 4px 8px;
+  border-radius: 8px;
+  font-size: 0.75rem;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  margin-bottom: 0;
+}
+
+.remove-favorite-btn:hover {
+  background: #e53935;
+  color: #fff;
+}
+
+.favorite-btn-table {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  color: #aaa;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition:
+    transform 0.2s ease,
+    color 0.2s ease;
+}
+
+.favorite-btn-table:hover {
+  transform: scale(1.2);
+}
+
+.favorite-btn-table.favorited {
+  color: #e0245e;
+}
+
+.favorite-btn-table i {
+  pointer-events: none;
+}
+
 .title-cell {
+  max-width: 280px;
   font-weight: 500;
   color: #111827;
 }
 
 .description-cell {
-  max-width: 320px;
+  max-width: 270px;
   white-space: normal !important;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -143,8 +203,6 @@
   background-color: #10b981 !important;
 }
 
-/* עיצוב לסטטוס */
-
 .tag.status {
   font-size: 0.7rem;
   border-radius: 8px;
@@ -169,7 +227,6 @@
   color: #374151 !important;
 }
 
-/* סוף */
 .table-action-btn {
   background-color: #4f46e5;
   color: white;
@@ -196,19 +253,3 @@ mark {
 }
 
 /* ריווח יפה בין עמודות */
-
-.requests-table tbody tr {
-  transition: background 0.2s ease;
-}
-
-.requests-table td {
-  vertical-align: middle;
-}
-.requests-table thead {
-  background-color: #f8fafc;
-}
-
-.requests-table th {
-  font-size: 0.85rem;
-  letter-spacing: 0.3px;
-}
