--- a/frontend/src/pages/homePage/hero-section.css
+++ b/frontend/src/pages/homePage/hero-section.css
@@ -6,9 +6,9 @@
 
 .hero-section {
   position: relative;
-  height: 100vh;
+  height: 90vh;
   display: flex;
-  align-items: center;
+  padding-top: 2rem;
   justify-content: center;
   background-image: url("../../images/background-img.png");
   background-size: cover;
@@ -73,7 +73,9 @@
   font-size: 1rem;
   margin-bottom: 2rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transition:
+    transform 0.3s ease,
+    box-shadow 0.3s ease;
 }
 
 .hero-badge:hover {
@@ -82,7 +84,7 @@
 }
 
 .hero-title {
-  font-size: 6rem;
+  font-size: 5rem;
   font-weight: 900;
   margin-bottom: 1.5rem;
   color: #0a0f25;
@@ -91,9 +93,9 @@
 }
 
 .hero-subtitle {
-  font-size: 1.9rem;
+  font-size: 1.6rem;
   line-height: 1.8;
-  max-width: 780px;
+  max-width: 700px;
   margin: 0 auto 3rem;
   color: #0a0f25;
   font-weight: 500;
@@ -164,6 +166,10 @@
   .hero-btn {
     padding: 0.8rem 2rem;
     font-size: 1rem;
+  }
+
+  .hero-content {
+    padding: 2rem 2.5rem;
   }
 }
 
