--- a/frontend/src/pages/aboutPage/about-page.css
+++ b/frontend/src/pages/aboutPage/about-page.css
@@ -191,9 +191,9 @@
 }
 
 /* Sections */
-.about-section {
+/* .about-section {
   padding: 60px 0;
-}
+} */
 
 .about-section h2 {
   font-size: 2rem;
