--- a/frontend/src/components/OfferCard/offer-card.css
+++ b/frontend/src/components/OfferCard/offer-card.css
@@ -329,8 +329,8 @@ mark {
 
 .offer-card.offer.owner-offer::before {
   content: "התרומה שלי";
-  background: #ffeb3b;
-  color: #000;
+  background: #082167;
+  color: #fff;
   border-radius: 50%;
   padding: 3px 25px;
   top: -11px;
